# CloudHaskell-MapReduce

./: README.md  cloudhaskell-countword.cabal  docker-compose.yml  stack.yaml
app/: Main.hs
file/: shakespeare.txt
src/: CountWords.hs  Lib.hs  MapReduce.hs  MonoDistrMapReduce.hs  PolyDistrMapReduce.hs
